# qt-camera-application

./: .gitignore  CMakeLists.txt  GITHUB_DEPLOYMENT.md  LICENSE  PROJECT_VERIFICATION.md  README.md  SETUP.md
scripts/: build_linux.sh  build_windows.bat  demo.md
src/: CameraController.cpp  CameraController.h  MainWindow.cpp  MainWindow.h  main.cpp
web/: README.md  error-demo.html  index.html  run.bat  run.sh  script.js  server.py  styles.css
